# changelogger

./: .gitignore  AGENTS.md  LICENSE  README.md  SKILL.md  changelogger.py  prompt.md  pyproject.toml  test_changelogger.py
.github/workflows/: ci.yml
