[project]
name = "changelogger"
version = "1.0.0"
description = "Find CHANGELOG.md URLs for npm packages"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "James Doyle", email = "james2doyle@gmail.com" },
]
dependencies = [
    "requests>=2.31.0",
    "packageurl-python>=0.9.5",
]

[project.urls]
Homepage = "https://github.com/jamesdoyle/changelogger"
Repository = "https://github.com/jamesdoyle/changelogger.git"
Issues = "https://github.com/jamesdoyle/changelogger/issues"

[project.scripts]
changelogger = "changelogger:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.38.1",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"